# arkulib-project

./: .gitignore  .gitmodules  CMakeLists.txt  Documentation.url  README.md
src/: erational.cpp  main.cpp  rational.cpp  suite.cpp
